kustomize/argocd/overlays/mayongcong.net/argocd-repo-server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - name: custom-tools
          mountPath: /usr/local/bin/argocd-vault-plugin
          subPath: argocd-vault-plugin
        - name: custom-ca
          mountPath: /etc/ssl/certs/nghz.net.crt
          subPath: nghz.net.crt

      volumes:
      - name: custom-tools
        emptyDir: {}
      - name: custom-ca
        configMap:
          name: custom-ca
      automountServiceAccountToken: true
